@@ -1,2 +1,2 @@
-__version__ = '0.2'
+__version__ = '0.3'
 
