@@ -1,6 +1,8 @@
 Copyright (C) 2018 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_073118_1 - New, longer preamble and updated opcodes.
+
 saw_072818_2 - Add another helper function to ag.orbit.command.
 
 saw_072818_1 - Add some wallet management functions.
